src/examples/type_errors/Unreadable.sol
pragma solidity ^0.5.0;

contract Addition {

    address owner;

    uint@owner a;
    uint@owner b;

	function f() {
		b = a + 1;
	}
}
